--- a/css/style2.css
+++ b/css/style2.css
@@ -99,3 +99,43 @@ body {
 #contact #contact-content a:hover {
   color: #999;
 }
+
+    @media screen and (max-width: 960px) {
+        #main-header-text {
+            font-size: 20px;
+        }
+        body {
+            width: 50%;
+            height: 50%;
+        }
+    }
+    
+    @media screen and (max-width: 768px) {
+        #main-header-text {
+            font-size: 20px;
+        }
+        body {
+            width: 40%;
+            height: 40%;
+        }
+    }
+    
+    @media screen and (max-width: 550px) {
+        #main-header-text {
+            font-size: 20px;
+        }
+        body {
+            width: 30%;
+            height: 30%;
+        }
+    }
+    
+    @media screen and (max-width: 320px) {
+        #main-header-text {
+            font-size: 20px;
+        }
+        body {
+            width: 100%;
+            height: 100%;
+        }
+    }
